<!--
  ~ mONO is a free app for a telephony provider's client area.
  ~ Copyright (C) 2017 Álvaro Brey Vilas <alvaro.brv@gmail.com>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/gpl-3.0>.
  -->

<resources>
    <string name="app_name">mONO</string>
    <string name="dialog_loading_title">Loading</string>
    <string name="dialog_loading_message">Please wait for a few seconds</string>
    <string name="menu_title_insert_credentials">Insert credentials</string>
    <string name="toast_inserting_credentials">Trying to insert credentials…</string>
    <string name="menu_title_about">About</string>
    <string name="title_activity_about">About</string>
    <string name="text_about">mONO is free and should by no means be marketed or used for any commercial purpose.</string>
    <string name="about_credits">Credits</string>
    <string name="about_icon_html"><![CDATA[Icons made by <a href=\"http://www.flaticon.com/authors/freepik\" title=\"Freepik\">Freepik</a> from <a href=\"http://www.flaticon.com\" title=\"Flaticon\">www.flaticon.com</a> is licensed by <a href=\"http://creativecommons.org/licenses/by/3.0/\" title=\"Creative Commons BY 3.0\" target=\"_blank\">CC 3.0 BY</a>]]></string>

    <!-- Login -->
    <string name="title_activity_login">Sign in</string>
    <string name="action_login">Login</string>
    <string name="hint_login_email">Email</string>
    <string name="hint_login_password">Password</string>
    <string name="text_login_title">Login</string>
    <string name="remember_credentials">Remember password</string>
    <string name="error_field_required">This field is required</string>


</resources>
